--- a/obe.html
+++ b/obe.html
@@ -54,7 +54,7 @@ h1{margin-bottom:8px}
 
 <header>
   <!-- Put jssstu_header.jpg in the same folder as this HTML -->
-   <!--<img src="jssstu_header.jpg" alt="University Header" id="uniHeader" onerror="this.style.display='none'"/>-->
+   <img src="jssstu_header.jpg" alt="University Header" id="uniHeader" onerror="this.style.display='none'"/>
 
   <div style="width:100%">
     <h1>OBE Calculation Sheet</h1>
