--- a/co_extract.html
+++ b/co_extract.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>Dynamic CO Computation Tool</title>
+<style>
 
+</style>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -11,7 +13,29 @@
 </head>
 
 <body class="bg-light">
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">OBE System</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="obe.html">OBE Calculation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="co_extract.html">CO Extraction</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div class="container mt-5">
   <div class="card shadow p-4">
 
