--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OBE Home</title>
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     body {
       background-color: #f8f9fa;
     }
     .home-container {
-      min-height: 100vh;
+      min-height: 90vh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -19,10 +21,16 @@
       text-align: center;
     }
     .home-title {
-      margin-bottom: 40px;
+      margin-bottom: 10px;
       font-size: 2.5rem;
       font-weight: bold;
       color: #004aad;
+    }
+    .description {
+      max-width: 600px;
+      margin-bottom: 40px;
+      color: #555;
+      font-size: 1.1rem;
     }
     .home-btn {
       width: 250px;
@@ -34,14 +42,43 @@
 </head>
 <body>
 
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">OBE System</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="obe.html">OBE Calculation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="co_extract.html">CO Extraction</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Main Content -->
 <div class="container home-container">
   <div class="home-title">Outcome Based Education</div>
+  <div class="description">
+    A structured approach to measure student learning achievements based on intended outcomes.
+    Use the tools below to calculate OBE metrics and extract Course Outcomes from exam results.
+  </div>
 
   <a href="obe.html" class="btn btn-primary home-btn">OBE Calculation</a>
   <a href="co_extract.html" class="btn btn-success home-btn">Extract CO from Exam Results</a>
 
   <div class="mt-5 text-muted">
-    &copy; 2025 
+    &copy; 2025
   </div>
 </div>
 
