--- a/obe.html
+++ b/obe.html
@@ -36,6 +36,13 @@ h1{margin-bottom:8px}
     button{padding:8px 12px;margin-top:8px;cursor:pointer}
     .small{font-size:0.9rem;color:#444}
 
+body{
+    font-family:Arial,Helvetica,sans-serif;
+    padding:20px;
+    max-width:1100px;
+    margin:auto;
+    margin-top:20px; /* prevents menu overlap */
+}
 
 .info-grid {
   display: grid;
@@ -51,7 +58,16 @@ h1{margin-bottom:8px}
 
 <body>
 
-
+<!-- Simple Navigation Bar -->
+<nav style="background:#004aad; padding:10px 20px; color:#fff; display:flex; justify-content:space-between; align-items:center;">
+  <div style="font-size:1.2rem; font-weight:600;">Outcome Based Education System</div>
+  <div style="display:flex; gap:20px;">
+    <a href="index.html" style="color:white; text-decoration:none;">Home</a>
+    <a href="obe.html" style="color:white; text-decoration:none;">OBE Calculation</a>
+    <a href="co_extract.html" style="color:white; text-decoration:none;">CO Extraction</a>
+  </div>
+</nav>
+<br/>
 <header>
   <!-- Put jssstu_header.jpg in the same folder as this HTML -->
    <img src="jssstu_header.jpg" alt="University Header" id="uniHeader" onerror="this.style.display='none'"/>
