--- a/obe.html
+++ b/obe.html
@@ -51,7 +51,13 @@ body{
   margin-top: 10px;
 }
 
+.to-delete {
+    background-color: #ffcccc; /* light red for missing USNs */
+}
 
+.sno-error {
+    background-color: #fff2b3; /* light yellow for S.No. mismatch */
+}
  </style>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
