--- a/obe.html
+++ b/obe.html
@@ -52,11 +52,15 @@ body{
 }
 
 .to-delete {
-    background-color: #ffcccc; /* light red for missing USNs */
+    background-color: #ffcccc; /* red for missing in CIE */
+}
+
+.missing-in-see {
+    background-color: #cce5ff; /* blue for missing in SEE */
 }
 
 .sno-error {
-    background-color: #fff2b3; /* light yellow for S.No. mismatch */
+    background-color: #fff2b3; /* yellow for S.No. mismatch */
 }
  </style>
 </head>
