--- a/co_extract.html
+++ b/co_extract.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
   <script src="script.js" defer></script>
 </head>
 
@@ -75,9 +76,11 @@
     <!-- Buttons -->
     <div class="text-center mt-3">
       <button class="btn btn-primary btn-lg px-4" onclick="computeCOs()">Compute CO Results</button>
+<!-- 
 <div style="padding:8px; background:#f0f8ff; border-left:4px solid #0077cc; margin-bottom:10px;">
   <b>Note:</b> Upload any Excel file having student <b>USN</b> and <b>Name</b>.
 </div>
+
 <input type="file" id="detailsFile" />
 <button class="btn btn-primary btn-lg px-4" onclick="addNameColumn()">Add Student Names</button>
 
@@ -85,7 +88,11 @@
     </div>
 <select id="sectionFilter">
   <option value="ALL">ALL</option>
-</select>
+</select>-->
+
+<button class="btn btn-warning mt-3" onclick="sendResultsBackWithoutSection()">
+  Send Results (No SECTION)
+</button>
 
 
     
@@ -95,5 +102,6 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
