--- a/co_extract.html
+++ b/co_extract.html
@@ -83,12 +83,13 @@
 
 <input type="file" id="detailsFile" />
 <button class="btn btn-primary btn-lg px-4" onclick="addNameColumn()">Add Student Names</button>
-
+</div>
+-->
       <button class="btn btn-success btn-lg px-4 ms-3" onclick="exportToExcel()">Export to Excel</button>
-    </div>
+    
 <select id="sectionFilter">
   <option value="ALL">ALL</option>
-</select>-->
+</select>
 
 <button class="btn btn-warning mt-3" onclick="sendResultsBackWithoutSection()">
   Send Results (No SECTION)
