--- a/co_extract.html
+++ b/co_extract.html
@@ -92,7 +92,7 @@
 </select>
 
 <button class="btn btn-warning mt-3" onclick="sendResultsBackWithoutSection()">
-  Send Results (No SECTION)
+  Send Results to obe sheet
 </button>
 
 
