--- a/co_extract.html
+++ b/co_extract.html
@@ -110,6 +110,9 @@
 <button class="btn btn-warning mt-3" onclick="sendResultsBackWithoutSection()">
   Send Results to obe sheet
 </button>
+<button id="resetBtn" class="btn btn-danger">
+    Reset Results
+</button>
 
 
     
