--- a/rocky.html
+++ b/rocky.html
@@ -11,7 +11,7 @@
   </style>
 
   <!-- Tabletop.js library -->
-  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.6.0/dist/tabletop.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.3.2/tabletop.min.js"></script>
 </head>
 <body>
 
@@ -51,3 +51,4 @@
 
 </body>
 </html>
+
