--- a/rocky.html
+++ b/rocky.html
@@ -10,8 +10,8 @@
     th { background: #f4f4f4; }
   </style>
 
-  <!-- Tabletop.js library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.3.2/tabletop.min.js"></script>
+  <!-- Latest Tabletop.js -->
+  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.6.0/dist/tabletop.min.js"></script>
 </head>
 <body>
 
@@ -20,6 +20,7 @@
 <table id="activity-table">
   <thead>
     <tr>
+      <th>Sl No</th>
       <th>Date</th>
       <th>Type</th>
       <th>Description</th>
@@ -31,13 +32,14 @@
 <script>
   window.addEventListener('DOMContentLoaded', function() {
     Tabletop.init({
-      key: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQuqqWiO_Inm0kKaFXpskmLv8DtSvBM61iO_SKX8HdqYEBBWGASGeNMJfG6rFJFpQ/pubhtml',
+      key: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQuqqWiO_Inm0kKaFXpskmLv8DtSvBM61iO_SKX8HdqYEBBWGASGeNMJfG6rFJFpQ/pubhtml', // replace with your pubhtml URL
       simpleSheet: true,
       callback: function(data, tabletop) {
         const tbody = document.querySelector("#activity-table tbody");
         data.forEach(row => {
           const tr = document.createElement("tr");
           tr.innerHTML = `
+            <td>${row["Sl No"]}</td>
             <td>${row.Date}</td>
             <td>${row.Type}</td>
             <td>${row.Description}</td>
@@ -51,4 +53,3 @@
 
 </body>
 </html>
-
