--- a/rocky.html
+++ b/rocky.html
@@ -47,7 +47,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
-const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQuqqWiO_Inm0kKaFXpskmLv8DtSvBM61iO_SKX8HdqYEBBWGASGeNMJfG6rFJFpQ/pub?output=csv";
+const csvUrl = "YOUR_CSV_URL_HERE";
 let tableData = [];
 
 fetch(csvUrl)
@@ -55,45 +55,33 @@ fetch(csvUrl)
   .then(csvText => {
     const parsed = Papa.parse(csvText, { header: true });
     tableData = parsed.data.map(row => ({
-      sl: row.sl,
-      date: row.date,
-      type: row.type,
-      description: row.description,
-      year: new Date(row.date).getFullYear()
+      sl: row["Sl No"],
+      date: row["Date"],
+      type: row["Type"],
+      description: row["Description"],
+      year: new Date(row["Date"]).getFullYear()
     }));
     populateYearFilter();
     renderTable();
-  })
-  .catch(err => console.error("Error loading CSV:", err));
-
-const tbody = document.querySelector("#activity-table tbody");
-const typeFilter = document.getElementById("typeFilter");
-const yearFilter = document.getElementById("yearFilter");
-const searchFilter = document.getElementById("searchFilter");
+  });
 
 function renderTable() {
+  const tbody = document.querySelector("#activity-table tbody");
   tbody.innerHTML = "";
-  const typeVal = typeFilter.value.toLowerCase();
-  const yearVal = yearFilter.value;
-  const searchVal = searchFilter.value.toLowerCase();
-
   tableData.forEach(row => {
-    if ((typeVal === "" || row.type.toLowerCase() === typeVal) &&
-        (yearVal === "" || row.year == yearVal) &&
-        (searchVal === "" || row.description.toLowerCase().includes(searchVal))) {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${row.sl}</td>
-        <td>${row.date}</td>
-        <td>${row.type}</td>
-        <td>${row.description}</td>
-      `;
-      tbody.appendChild(tr);
-    }
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${row.sl}</td>
+      <td>${row.date}</td>
+      <td>${row.type}</td>
+      <td>${row.description}</td>
+    `;
+    tbody.appendChild(tr);
   });
 }
 
 function populateYearFilter() {
+  const yearFilter = document.getElementById("yearFilter");
   const years = [...new Set(tableData.map(r => r.year))].sort((a,b)=>b-a);
   years.forEach(y => {
     const opt = document.createElement("option");
@@ -102,10 +90,6 @@ function populateYearFilter() {
     yearFilter.appendChild(opt);
   });
 }
-
-typeFilter.addEventListener("change", renderTable);
-yearFilter.addEventListener("change", renderTable);
-searchFilter.addEventListener("input", renderTable);
 </script>
 
 </body>
