--- a/rocky.html
+++ b/rocky.html
@@ -1,39 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Academic Activities</title>
-  <style>
-    body { font-family: Arial; margin: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #999; padding: 8px; text-align: left; }
-    th { background: #f4f4f4; }
-    input, select { margin: 5px 10px 5px 0; padding: 5px; }
-  </style>
+<meta charset="UTF-8">
+<title>CSV Table</title>
 </head>
 <body>
 
-<h1>Academic Activities</h1>
-
 <!-- Filters -->
-<label for="typeFilter">Type:</label>
 <select id="typeFilter">
-  <option value="">All</option>
-  <option value="Journal">Journal</option>
-  <option value="Conference">Conference</option>
-  <option value="Workshop">Workshop</option>
+  <option value="">All Types</option>
 </select>
 
-<label for="yearFilter">Year:</label>
 <select id="yearFilter">
-  <option value="">All</option>
+  <option value="">All Years</option>
 </select>
 
-<label for="searchFilter">Search:</label>
 <input type="text" id="searchFilter" placeholder="Search Description">
 
 <!-- Table -->
-<table id="activity-table">
+<table id="activity-table" border="1" cellpadding="5">
   <thead>
     <tr>
       <th>Sl No</th>
@@ -45,52 +30,88 @@
   <tbody></tbody>
 </table>
 
+<!-- PapaParse Library -->
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
-const csvUrl = "YOUR_CSV_URL_HERE";
+const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQuqqWiO_Inm0kKaFXpskmLv8DtSvBM61iO_SKX8HdqYEBBWGASGeNMJfG6rFJFpQ/pub?output=csv";
 let tableData = [];
 
 fetch(csvUrl)
   .then(res => res.text())
   .then(csvText => {
-    const parsed = Papa.parse(csvText, { header: true });
+    // Parse CSV with headers
+    const parsed = Papa.parse(csvText, { header: true, skipEmptyLines: true });
     tableData = parsed.data.map(row => ({
-      sl: row["Sl No"],
-      date: row["Date"],
-      type: row["Type"],
-      description: row["Description"],
-      year: new Date(row["Date"]).getFullYear()
+      sl: row["Sl No"] || "",
+      date: row["Date"] || "",
+      type: row["Type"] || "",
+      description: row["Description"] || "",
+      year: row["Date"] ? new Date(row["Date"]).getFullYear() : ""
     }));
+    populateTypeFilter();
     populateYearFilter();
     renderTable();
-  });
+  })
+  .catch(err => console.error("Error loading CSV:", err));
 
+const tbody = document.querySelector("#activity-table tbody");
+const typeFilter = document.getElementById("typeFilter");
+const yearFilter = document.getElementById("yearFilter");
+const searchFilter = document.getElementById("searchFilter");
+
+// Render table with filters
 function renderTable() {
-  const tbody = document.querySelector("#activity-table tbody");
   tbody.innerHTML = "";
+  const typeVal = typeFilter.value.toLowerCase();
+  const yearVal = yearFilter.value;
+  const searchVal = searchFilter.value.toLowerCase();
+
   tableData.forEach(row => {
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${row.sl}</td>
-      <td>${row.date}</td>
-      <td>${row.type}</td>
-      <td>${row.description}</td>
-    `;
-    tbody.appendChild(tr);
+    if ((typeVal === "" || row.type.toLowerCase() === typeVal) &&
+        (yearVal === "" || row.year == yearVal) &&
+        (searchVal === "" || row.description.toLowerCase().includes(searchVal))) {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${row.sl}</td>
+        <td>${row.date}</td>
+        <td>${row.type}</td>
+        <td>${row.description}</td>
+      `;
+      tbody.appendChild(tr);
+    }
   });
 }
 
+// Populate Type filter
+function populateTypeFilter() {
+  const types = [...new Set(tableData.map(r => r.type))].sort();
+  types.forEach(t => {
+    if(t) {
+      const opt = document.createElement("option");
+      opt.value = t;
+      opt.textContent = t;
+      typeFilter.appendChild(opt);
+    }
+  });
+}
+
+// Populate Year filter
 function populateYearFilter() {
-  const yearFilter = document.getElementById("yearFilter");
   const years = [...new Set(tableData.map(r => r.year))].sort((a,b)=>b-a);
   years.forEach(y => {
-    const opt = document.createElement("option");
-    opt.value = y;
-    opt.textContent = y;
-    yearFilter.appendChild(opt);
+    if(y) {
+      const opt = document.createElement("option");
+      opt.value = y;
+      opt.textContent = y;
+      yearFilter.appendChild(opt);
+    }
   });
 }
-</script>
 
+// Add event listeners
+typeFilter.addEventListener("change", renderTable);
+yearFilter.addEventListener("change", renderTable);
+searchFilter.addEventListener("input", renderTable);
+</script>
 </body>
 </html>
