--- a/rocky.html
+++ b/rocky.html
@@ -20,7 +20,7 @@
 <body class="p-4">
 
 <div class="container">
-  <h2 class="mb-4">Publication Table</h2>
+  <h2 class="mb-4">Academic Activities</h2>
 
   <div class="row mb-3 g-2">
     <div class="col-md-3">
