--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
   <a href="obe.html" class="btn btn-primary home-btn">OBE Calculation</a>
   <a href="co_extract.html" class="btn btn-success home-btn">Extract CO from Exam Results</a>
 
+ <a href="obe_wizard.html" class="btn btn-warning home-btn">Step by step wizard</a>
+
+
   <div class="mt-5 text-muted">
     &copy; 2025
   </div>
